--- a/style.css
+++ b/style.css
@@ -124,3 +124,13 @@ body {
     border-radius: 25px;
     
 }
+
+.power{
+    position: absolute;
+    padding: 5px;
+    text-align: center;
+    border: 1px dotted #555;
+    background-color: rgba(255,255,255,0.1);
+    border-radius: 25px;
+    
+}
